--- a/style.css
+++ b/style.css
@@ -75,6 +75,23 @@ a:hover {
   margin-right: 0.5rem;
 }
 
+.btn-download-app {
+  background-color: var(--clr-dark);
+  color: var(--clr-white);
+  border-radius: 8px;
+  padding: 12px 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
+
+.btn-download-app:hover {
+  background-color: var(--clr-primary);
+  color: var(--clr-white);
+  text-decoration: none;
+}
+
 .btn-mobile {
   background-color: transparent;
   border: none;
@@ -216,3 +233,62 @@ header .container {
   }
 }
 
+#hero {
+  background: rgb(99, 102, 241);
+  background: linear-gradient(
+    0deg,
+    rgba(99, 102, 241, 0.1) 0%,
+    rgba(218, 70, 239, 0.05) 42%,
+    rgba(241, 24, 253, 0.07) 83%
+  );
+  padding-bottom: 2rem;
+
+  .container {
+  }
+
+  .headline {
+    text-align: center;
+
+    h1 {
+      font-size: 36px;
+      font-weight: 800;
+    }
+
+    @media (min-width768) {
+      font-size: 56px;
+    }
+  }
+
+  .content {
+    text-align: center;
+    p {
+      font-size: 18px;
+      margin-bottom: 3rem;
+    }
+
+    .buttons {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    .discover-more {
+      color: var(--clr-dark);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+      margin-top: 2rem;
+    }
+  }
+
+  .images {
+    display: none;
+
+    .img-back {
+    }
+
+    .img-front {
+    }
+  }
+}
