--- a/style.css
+++ b/style.css
@@ -242,25 +242,50 @@ header .container {
     rgba(241, 24, 253, 0.07) 83%
   );
   padding-bottom: 2rem;
+  overflow: hidden;
+
+  @media (min-width: 768px) {
+    padding-bottom: 0;
+  }
 
   .container {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "headline"
+      "content";
+
+    @media (min-width: 768px) {
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas:
+        "headline headline"
+        "content images";
+    }
   }
 
   .headline {
+    grid-area: headline;
     text-align: center;
 
     h1 {
       font-size: 36px;
       font-weight: 800;
-    }
 
-    @media (min-width768) {
-      font-size: 56px;
+      @media (min-width: 768px) {
+        font-size: 56px;
+      }
     }
   }
 
   .content {
+    grid-area: content;
     text-align: center;
+
+    @media (min-width: 768px) {
+      text-align: left;
+    }
+
     p {
       font-size: 18px;
       margin-bottom: 3rem;
@@ -270,6 +295,10 @@ header .container {
       display: flex;
       flex-direction: column;
       gap: 1rem;
+
+      @media (min-width: 1400px) {
+        flex-direction: row;
+      }
     }
 
     .discover-more {
@@ -279,16 +308,40 @@ header .container {
       justify-content: center;
       gap: 1rem;
       margin-top: 2rem;
+      
+
+      @media (min-width: 768px) {
+        justify-content: flex-start;
+        margin-bottom: 2rem;
+      }
     }
   }
 
   .images {
+    position: relative;
+    grid-area: images;
     display: none;
 
+    @media (min-width: 768px) {
+      display: block;
+    }
+
     .img-back {
+        position: absolute;
+        z-index: -10;
+        bottom: 0;
+        right: 100px;
+        width: 70%;
+        height: auto;
     }
 
     .img-front {
+        position: absolute;
+        z-index: -5;
+        bottom: 0;
+        right: 0;
+        width: 70%;
+        height: auto;
     }
   }
 }
