--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ header .container {
 
 #brands {
   display: none;
-  padding-top: 2rem;
+  padding-top: 4rem;
   padding-bottom: 2rem;
 
   .container {
@@ -370,7 +370,8 @@ header .container {
 #app-features {
   .container {
     display: flex;
-    padding-top: 1rem;
+    padding-top: 2rem;
+    padding-bottom: 4rem;
   }
 
   .app-image {
@@ -420,16 +421,38 @@ header .container {
 
   @media (min-width: 768px) {
     h2 {
-        font-size: 33.5px;
+      font-size: 33.5px;
     }
 
-    .feature-group{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
-        gap: 2rem;
+    .feature-group {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr;
+      gap: 2rem;
+    }
+  }
+
+  @media (min-width: 1400px) {
+    .container {
+      display: grid;
+      grid-template-columns: auto 1fr;
+      gap: 10rem;
     }
 
+    h2,
+    #app-features-text  {
+      text-align: left;
+    }
+
+    .app-image {
+      display: block;
+      margin-top: 3rem;
+
+      img {
+        width: 348px;
+        height: 684px;
+      }
+    }
   }
 }
 
