--- a/style.css
+++ b/style.css
@@ -471,7 +471,7 @@ header .container {
 }
 
 #app-features-2 {
-    background-color: var(--clr-feature-gray);
+  background-color: var(--clr-feature-gray);
 
   .container {
     padding-top: 2rem;
@@ -506,7 +506,6 @@ header .container {
       color: var(--clr-text);
       line-height: var(--line-height-p);
     }
-
   }
 
   .desktop-images,
@@ -516,99 +515,166 @@ header .container {
     display: none;
   }
 
-
   @media (min-width: 768px) {
     h2 {
-        font-size: 33.5px;
-        font-weight: 800;
+      font-size: 33.5px;
+      font-weight: 800;
     }
 
     .mobile-images {
-        display: none;
+      display: none;
     }
 
     .tablet-images {
-        display: flex;
-        gap: 0.25rem;
+      display: flex;
+      gap: 0.25rem;
     }
 
     img {
-        width: 203.32px;
-        height: 410px;
+      width: 203.32px;
+      height: 410px;
     }
 
     .mobile-text {
-        display: none;
+      display: none;
     }
 
     .tablet-text {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding-left: 7rem;
-        padding-right: 7rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding-left: 7rem;
+      padding-right: 7rem;
     }
 
     h3 {
-        text-align: center;
-        color: var(--clr-headlines-dark);
-        line-height: var(--line-height-headline);
-        font-size: 22.7px;
-        font-weight: 800;
+      text-align: center;
+      color: var(--clr-headlines-dark);
+      line-height: var(--line-height-headline);
+      font-size: 22.7px;
+      font-weight: 800;
     }
 
     p {
-        text-align: center;
-        line-height: var(--line-height-p);
-        margin-top: -0.5rem;
+      text-align: center;
+      line-height: var(--line-height-p);
+      margin-top: -0.5rem;
     }
   }
 
-  @media (min-width:1400px) {
-
-    .tablet-images, .tablet-text {
-        display: none;
+  @media (min-width: 1400px) {
+    .tablet-images,
+    .tablet-text {
+      display: none;
     }
 
     .desktop-images {
-        display: flex;
-        gap: 2rem;
-        padding-bottom: 4rem;
+      display: flex;
+      gap: 2rem;
+      padding-bottom: 4rem;
 
-        img {
-            width: 328px;
-            height: 663px;
-        }
+      img {
+        width: 328px;
+        height: 663px;
+      }
     }
 
     .desktop-text {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding-left: 20rem;
-        padding-right: 20rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding-left: 20rem;
+      padding-right: 20rem;
     }
 
     h3 {
-        font-size: 24px;
-        font-weight: 800;
-        padding-bottom: 1rem;
+      font-size: 24px;
+      font-weight: 800;
+      padding-bottom: 1rem;
     }
 
     p {
-        line-height: var(--line-height-p);
-        font-size: 16px;
-        font-weight: 400;
+      line-height: var(--line-height-p);
+      font-size: 16px;
+      font-weight: 400;
     }
-
   }
-
 }
 
 #app-features-3 {
+  display: none;
 
+  @media (min-width: 768px) {
+    display: none;
+  }
+
+  @media (min-width: 1400px) {
+    display: block;
+
+    .container {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      padding: 10rem;
+      column-gap: 2rem;
+    }
+
+    h3 {
+      color: var(--clr-headlines-dark);
+      font-size: 32px;
+      font-weight: 800;
+      width: 416px;
+    }
+
+    li {
+        line-height: var(--line-height-p);
+        list-style:none ;
+        margin-left: -2rem;
+
+        i {
+            margin-right: 0.5rem;
+            color: var(--clr-primary);
+        }
+    }
+
+    .learn-more{
+        width: 10rem;
+        height: 3rem;
+        background-color: var(--clr-primary);
+        color: var(--clr-white);
+        padding: 11px 28px 11px 28px;
+        border: none;
+        border-radius: 0.5rem;
+        margin-top: 2rem;
+        margin-left: 0.5rem;
+
+        span{
+            margin-right: 0.25rem;
+        }
+    }
+
+    .receive-features {
+        display:flex;
+        flex-direction: column;
+
+        .learn-more {
+            margin-left: 0.15rem;
+        }
+
+        p {
+            line-height: var(--line-height-p);
+        }
+    }
+
+    .receive-info {
+        display: flex;
+        gap: 2rem;
+    }
+
+
+  }
 }
 
 footer {
