--- a/style.css
+++ b/style.css
@@ -629,51 +629,110 @@ header .container {
     }
 
     li {
-        line-height: var(--line-height-p);
-        list-style:none ;
-        margin-left: -2rem;
+      line-height: var(--line-height-p);
+      list-style: none;
+      margin-left: -2rem;
 
-        i {
-            margin-right: 0.5rem;
-            color: var(--clr-primary);
-        }
+      i {
+        margin-right: 0.5rem;
+        color: var(--clr-primary);
+      }
     }
 
-    .learn-more{
-        width: 10rem;
-        height: 3rem;
-        background-color: var(--clr-primary);
-        color: var(--clr-white);
-        padding: 11px 28px 11px 28px;
-        border: none;
-        border-radius: 0.5rem;
-        margin-top: 2rem;
-        margin-left: 0.5rem;
+    .learn-more {
+      width: 10rem;
+      height: 3rem;
+      background-color: var(--clr-primary);
+      color: var(--clr-white);
+      padding: 11px 28px 11px 28px;
+      border: none;
+      border-radius: 0.5rem;
+      margin-top: 2rem;
+      margin-left: 0.5rem;
 
-        span{
-            margin-right: 0.25rem;
-        }
+      span {
+        margin-right: 0.25rem;
+      }
     }
 
     .receive-features {
-        display:flex;
-        flex-direction: column;
+      display: flex;
+      flex-direction: column;
 
-        .learn-more {
-            margin-left: 0.15rem;
-        }
+      .learn-more {
+        margin-left: 0.15rem;
+      }
 
-        p {
-            line-height: var(--line-height-p);
-        }
+      p {
+        line-height: var(--line-height-p);
+      }
     }
 
     .receive-info {
-        display: flex;
-        gap: 2rem;
+      display: flex;
+      gap: 2rem;
+    }
+  }
+}
+
+#clients-reviews {
+  display: none;
+
+  @media (min-width: 1400px) {
+    display: block;
+    background-color: var(--clr-feature-gray);
+    padding: 3rem 8rem;
+  }
+
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 2rem;
+  }
+
+  h2 {
+    color: var(--clr-headlines-dark);
+    font-size: 40px;
+    padding-right: 4rem;
+    padding-top: -2rem;
+  }
+
+  .client-review {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--clr-white);
+    margin-top: 2.5rem;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
+    padding: 1rem;
+
+    .quote-img {
+        margin-top: -2rem;
+        margin-bottom: 1rem;
+        width: 44px;
+        height: 44px;
+        box-shadow: 2px var(--clr-primary);
     }
 
+    .rating-img {
+        width: 90px;
+        height: 16px;
+    }
 
+    p {
+        line-height: var(--line-height-p);
+    }
+
+  }
+
+  .client-info {
+    display: flex;
+    gap: 1rem;
+
+    .name-job {
+      h3 {
+        margin-bottom: -1rem;
+      }
+    }
   }
 }
 
