--- a/style.css
+++ b/style.css
@@ -730,6 +730,7 @@ header .container {
     .name-job {
       h3 {
         margin-bottom: -1rem;
+        color: #0b0f19;
       }
     }
   }
@@ -868,6 +869,7 @@ header .container {
       display: flex;
       gap: 2rem;
       margin-top: 2rem;
+      padding-bottom: 2rem;
 
       .phone,
       .sms {
@@ -918,6 +920,12 @@ header .container {
         i,
         button {
           color: #22c55e;
+        }
+
+        #sms-icon {
+          transform: rotate(180deg);
+          transform-origin: left;
+          margin-left: 1.5rem;
         }
       }
     }
