--- a/style.css
+++ b/style.css
@@ -1003,7 +1003,7 @@ header .container {
         }
 
         button {
-            cursor: pointer;
+          cursor: pointer;
         }
       }
     }
@@ -1021,6 +1021,70 @@ header .container {
         row-gap: 16px;
         cursor: pointer;
       }
+    }
+  }
+}
+
+#subscribe {
+  .container {
+    background-color: var(--clr-feature-gray);
+    width: 90%;
+    padding-top: 4rem;
+    padding-bottom: 3rem;
+    border-radius: 0.5rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .notification {
+    margin-left: 1rem;
+    display: flex;
+  }
+
+  img {
+    width: 78px;
+    height: 78px;
+    margin-left: 2rem;
+  }
+
+  h3 {
+    color: var(--clr-dark);
+    font-size: 21.6px;
+    font-weight: 800;
+    width: 230px;
+    height: 87px;
+    margin-left: 1rem;
+    margin-top: 0.5rem;
+
+    span {
+      display: none;
+    }
+  }
+
+  form {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+
+    input {
+      height: 52.3px;
+      width: 358px;
+    }
+
+    #your-email {
+      width: 220.73;
+      border-radius: 0.5rem 0 0 0.5rem;
+      border: 1px solid var(--clr-border-gray);
+    }
+
+    #sub {
+      width: 114px;
+      border-radius: 0 0.5rem 0.5rem 0;
+      border: none;
+      background-color: var(--clr-primary);
+      color: white;
+      font-size: 16px;
+      font-weight: 600;
     }
   }
 }
