--- a/style.css
+++ b/style.css
@@ -1087,6 +1087,28 @@ header .container {
       font-weight: 600;
     }
   }
+
+  @media (min-width:768px) {
+
+    .container {
+        width: 95%;
+        display: flex;
+        flex-direction: row;
+    }
+
+    .notification {
+        margin-left: 0;
+        margin-top: 1rem;
+    }
+
+    #your-email {
+        width: 201px;
+    }
+
+    #sub {
+        width: 78px;
+    }
+  }
 }
 
 footer {
