--- a/style.css
+++ b/style.css
@@ -955,7 +955,8 @@ header .container {
     .container {
       display: grid;
       grid-template-columns: 40% 60%;
-      grid-template-rows: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      padding-bottom: 4rem;
     }
 
     .contacts {
@@ -1013,7 +1014,7 @@ header .container {
       grid-row: 1 / -1;
       margin-left: -15rem;
       margin-right: 30rem;
-      margin-top: -13rem;
+      margin-top: 5rem;
 
       .faq {
         background-color: var(--clr-white);
@@ -1088,25 +1089,64 @@ header .container {
     }
   }
 
-  @media (min-width:768px) {
-
+  @media (min-width: 768px) {
     .container {
-        width: 95%;
-        display: flex;
-        flex-direction: row;
+      width: 95%;
+      display: flex;
+      flex-direction: row;
     }
 
     .notification {
-        margin-left: 0;
-        margin-top: 1rem;
+      margin-left: 0;
+      margin-top: 1rem;
     }
 
     #your-email {
-        width: 201px;
+      width: 201px;
     }
 
     #sub {
+      width: 78px;
+    }
+  }
+
+  @media (min-width: 1400px) {
+    .container {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+    }
+
+    .notification {
+      /* margin-left: 3rem; */
+
+      img {
         width: 78px;
+        height: 78px;
+      }
+
+      h3 {
+        width: 416px;
+        span {
+          display: flex;
+          flex-direction: row;
+        }
+      }
+    }
+
+    form {
+      margin-left: 3rem;
+      margin-top: 1.5rem;
+      height: 52px;
+
+      #your-email {
+        width: 330px;
+        padding-left: 1rem;
+      }
+
+      #sub {
+        width: 142px;
+      }
     }
   }
 }
