Fix the colors variables in root

--- a/style.css
+++ b/style.css
@@ -1,21 +1,34 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
 
 :root {
-  --clr-dark: #0b0f19;
   --clr-primary: #6366f1;
-  --clr-gray: #9397ad;
-  --clr-white: #ffffff;
-  --clr-feature-gray: #f3f6ff;
-  --clr-headlines-dark: #131022;
-  --clr-text: #585c7b;
-  --clr-border-gray: #e2e5f1;
+  --clr-headline: #0b0f19;
+  --clr-navbar: #33354d;
+  --clr-darkmode: #565973;
+  --clr-text: #565973;
+  --clr-text-btn: #ffffff;
+  --clr-toggle-bg: #9397ad;
+  --clr-brand-bg: #ffffff;
+  --clr-feature-bg: #ebedf7;
+  --clr-section-bg: #f3f6ff;
+  --clr-icon-bg: #f3f6ff;
+  --clr-icon: #33354d;
+  --clr-icon-open: #ffffff;
+  --clr-faq-bg: #ffffff;
 
   --container-padding: 1rem;
   --transtion-time: all 0.2s;
-
   --line-height-p: 28.8px;
   --line-height-headline: 30.2px;
 }
+
+/* html {
+  color-scheme: light;
+} */
+
+/* .dark {
+  color-scheme: dark;
+} */
 
 * {
   box-sizing: border-box;
@@ -70,7 +83,7 @@ a:hover {
 
 .btn-primary {
   background-color: var(--clr-primary);
-  color: var(--clr-white);
+  color: var(--clr-text-btn);
   border-radius: 8px;
   padding: 12px 25px;
   display: flex;
@@ -80,8 +93,8 @@ a:hover {
 }
 
 .btn-primary:hover {
-  background-color: var(--clr-gray);
-  color: var(--clr-white);
+  background-color: var(--clr-toggle-bg);
+  color: var(--clr-text-btn);
   text-decoration: none;
 }
 
@@ -90,8 +103,8 @@ a:hover {
 }
 
 .btn-download-app {
-  background-color: var(--clr-dark);
-  color: var(--clr-white);
+  background-color: var(--clr-headline);
+  color: var(--clr-text-btn);
   border-radius: 8px;
   padding: 12px 25px;
   display: flex;
@@ -102,7 +115,7 @@ a:hover {
 
 .btn-download-app:hover {
   background-color: var(--clr-primary);
-  color: var(--clr-white);
+  color: var(--clr-text-btn);
   text-decoration: none;
 }
 
@@ -116,64 +129,64 @@ a:hover {
   display: flex;
   align-items: center;
   gap: 10px;
-}
 
-.btn-toggle-switch .label {
-  display: none;
-}
+  .label {
+    display: none;
+  }
 
-.toggle-switch {
-  position: relative;
-  display: inline-block;
-  width: 45px;
-  height: 25px;
-}
+  .toggle-switch {
+    position: relative;
+    display: inline-block;
+    width: 45px;
+    height: 25px;
+  }
 
-.toggle-switch input {
-  opacity: 0;
-}
+  input {
+    opacity: 0;
+  }
 
-.toggle-switch input:checked + .slider {
-  background-color: var(--clr-primary);
-}
+  input:checked + .slider {
+    background-color: var(--clr-primary);
+  }
 
-.toggle-switch input:focus + .slider {
-  box-shadow: 0 0 1px var(--clr-primary);
-}
+  input:focus + .slider {
+    box-shadow: 0 0 1px var(--clr-primary);
+  }
 
-.toggle-switch input:checked + .slider::before {
-  transform: translateX(18px);
-  background-color: var(--clr-white);
-}
+  input:checked + .slider::before {
+    transform: translateX(18px);
+    background-color: var(--clr-text-btn);
+  }
 
-.toggle-switch .slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: var(--clr-gray);
-  transition: all 0.2s;
-}
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--clr-toggle-bg);
+    transition: all 0.2s;
+  }
 
-.toggle-switch .slider:before {
-  position: absolute;
-  content: "";
-  height: 20px;
-  width: 20px;
-  left: 3px;
-  bottom: 2.5px;
-  background-color: var(--clr-white);
-  transition: all 0.2s;
-}
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    left: 3px;
+    bottom: 2.5px;
+    background-color: var(--clr-text-btn);
+    transition: all 0.2s;
+  }
 
-.toggle-switch .slider.round {
-  border-radius: 35px;
-}
+  .slider.round {
+    border-radius: 35px;
+  }
 
-.toggle-switch .slider.round:before {
-  border-radius: 50%;
+  .slider.round:before {
+    border-radius: 50%;
+  }
 }
 
 .navbar {
@@ -181,7 +194,7 @@ a:hover {
 }
 
 .nav-link {
-  color: var(--clr-dark);
+  color: var(--clr-navbar);
   font-weight: 600;
   text-decoration: none;
 }
@@ -216,7 +229,7 @@ header .container {
   padding-bottom: 2rem;
 
   .container {
-    background-color: var(--clr-white);
+    background-color: var(--clr-brand-bg);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -235,7 +248,7 @@ header .container {
 }
 
 #hero {
-  background: rgb(99, 102, 241);
+  background: var(--clr-primary);
   background: linear-gradient(
     0deg,
     rgba(99, 102, 241, 0.1) 0%,
@@ -279,7 +292,7 @@ header .container {
     h1 {
       font-size: 36px;
       font-weight: 800;
-      color: var(--clr-headlines-dark);
+      color: var(--clr-headline);
 
       @media (min-width: 768px) {
         font-size: 56px;
@@ -316,7 +329,7 @@ header .container {
     }
 
     .discover-more {
-      color: var(--clr-dark);
+      color: var(--clr-text);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -393,11 +406,11 @@ header .container {
   h2 {
     font-size: 27.9px;
     font-weight: 900;
-    color: var(--clr-headlines-dark);
+    color: var(--clr-headline);
   }
 
   h3 {
-    color: var(--clr-headlines-dark);
+    color: var(--clr-headline);
   }
 
   #app-features-text {
@@ -417,7 +430,7 @@ header .container {
   }
 
   .feature-img {
-    background-color: var(--clr-feature-gray);
+    background-color: var(--clr-feature-bg);
     width: 60px;
     height: 60px;
     display: flex;
@@ -471,7 +484,7 @@ header .container {
 }
 
 #app-features-2 {
-  background-color: var(--clr-feature-gray);
+  background-color: var(--clr-section-bg);
 
   .container {
     padding-top: 2rem;
@@ -486,7 +499,7 @@ header .container {
     font-size: 27.9px;
     font-weight: 800;
     padding-bottom: 1rem;
-    color: var(--clr-headlines-dark);
+    color: var(--clr-headline);
   }
 
   .mobile-text {
@@ -496,7 +509,7 @@ header .container {
       text-align: center;
       padding-left: 1rem;
       padding-right: 1rem;
-      color: var(--clr-headlines-dark);
+      color: var(--clr-headline);
     }
 
     p {
@@ -550,7 +563,7 @@ header .container {
 
     h3 {
       text-align: center;
-      color: var(--clr-headlines-dark);
+      color: var(--clr-headline);
       line-height: var(--line-height-headline);
       font-size: 22.7px;
       font-weight: 800;
@@ -622,7 +635,7 @@ header .container {
     }
 
     h3 {
-      color: var(--clr-headlines-dark);
+      color: var(--clr-headline);
       font-size: 32px;
       font-weight: 800;
       width: 416px;
@@ -643,7 +656,7 @@ header .container {
       width: 10rem;
       height: 3rem;
       background-color: var(--clr-primary);
-      color: var(--clr-white);
+      color: var(--clr-text-btn);
       padding: 11px 28px 11px 28px;
       border: none;
       border-radius: 0.5rem;
@@ -680,7 +693,7 @@ header .container {
 
   @media (min-width: 1400px) {
     display: block;
-    background-color: var(--clr-feature-gray);
+    background-color: var(--clr-section-bg);
     padding: 3rem 8rem;
   }
 
@@ -691,21 +704,24 @@ header .container {
   }
 
   h2 {
-    color: var(--clr-headlines-dark);
+    color: var(--clr-headline);
     font-size: 40px;
     padding-right: 4rem;
     padding-top: -2rem;
   }
 
   .client-review {
-    display: flex;
-    flex-direction: column;
-    background-color: var(--clr-white);
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto auto;
+    background-color: var(--clr-brand-bg);
     margin-top: 2.5rem;
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
     padding: 1rem;
 
     .quote-img {
+      grid-row: 1/2;
+      grid-column: 1/2;
       margin-top: -2rem;
       margin-bottom: 1rem;
       width: 44px;
@@ -714,24 +730,35 @@ header .container {
     }
 
     .rating-img {
+      grid-row: 2/3;
+      grid-column: 1/2;
       width: 90px;
       height: 16px;
     }
 
     p {
+      grid-row: 3/4;
+      grid-column: 1/-1;
       line-height: var(--line-height-p);
     }
-  }
 
-  .client-info {
-    display: flex;
-    gap: 1rem;
+    .client-img {
+      grid-row: 4/-1;
+      grid-column: 1/-1;
+      margin-top: 1rem;
+    }
 
-    .name-job {
-      h3 {
-        margin-bottom: -1rem;
-        color: #0b0f19;
-      }
+    .client-name {
+      grid-row: 4/-1;
+      grid-column: 2/-1;
+      margin-left: -7.5rem;
+    }
+
+    .client-job {
+      grid-row: 5/-1;
+      grid-column: 2/-1;
+      margin-left: -7.5rem;
+      margin-top: -1rem;
     }
   }
 }
@@ -748,7 +775,7 @@ header .container {
 
   .contacts {
     h2 {
-      color: var(--clr-headlines-dark);
+      color: var(--clr-headline);
       font-size: 24.7;
       font-weight: 800;
       text-align: center;
@@ -778,7 +805,7 @@ header .container {
     details {
       summary {
         list-style: none;
-        color: var(--clr-headlines-dark);
+        color: var(--clr-headline);
         position: relative;
         display: flex;
         justify-content: space-between;
@@ -796,7 +823,7 @@ header .container {
         .icon {
           width: 36px;
           height: 36px;
-          background-color: var(--clr-feature-gray);
+          background-color: var(--clr-icon-bg);
           text-align: center;
           align-content: center;
           border-radius: 50%;
@@ -804,7 +831,7 @@ header .container {
           right: 0;
 
           i {
-            color: #3e4265;
+            color: var(--clr-icon);
           }
         }
       }
@@ -819,19 +846,19 @@ header .container {
     }
 
     details[open] summary .icon {
-      background-color: #6366f1;
+      background-color: var(--clr-primary);
       box-shadow: 0 1px 10px var(--clr-primary);
       -webkit-transform: rotate(180deg);
 
       i {
-        color: var(--clr-white);
+        color: var(--clr-icon-open);
       }
     }
   }
 
   .contact-us {
     background-color: var(--clr-primary);
-    color: var(--clr-white);
+    color: var(--clr-text-btn);
     font-size: 14px;
     font-weight: 600;
     width: 162.29px;
@@ -890,7 +917,7 @@ header .container {
 
         button {
           border: none;
-          background-color: var(--clr-white);
+          background-color: transparent;
           text-align: left;
           margin-left: -0.3rem;
           margin-top: 0.75rem;
@@ -905,7 +932,7 @@ header .container {
         p {
           font-size: 14px;
           font-weight: 400;
-          color: #565973;
+          color: var(--clr-text);
         }
       }
 
@@ -1017,7 +1044,7 @@ header .container {
       margin-top: 5rem;
 
       .faq {
-        background-color: var(--clr-white);
+        background-color: var(--clr-faq-bg);
         width: 746px;
         row-gap: 16px;
         cursor: pointer;
@@ -1028,7 +1055,7 @@ header .container {
 
 #subscribe {
   .container {
-    background-color: var(--clr-feature-gray);
+    background-color: var(--clr-section-bg);
     width: 90%;
     padding-top: 4rem;
     padding-bottom: 3rem;
@@ -1049,7 +1076,7 @@ header .container {
   }
 
   h3 {
-    color: var(--clr-dark);
+    color: var(--clr-headline);
     font-size: 21.6px;
     font-weight: 800;
     width: 230px;
@@ -1084,7 +1111,7 @@ header .container {
       border-radius: 0 0.5rem 0.5rem 0;
       border: none;
       background-color: var(--clr-primary);
-      color: white;
+      color: var(--clr-text-btn);
       font-size: 16px;
       font-weight: 600;
     }
@@ -1156,7 +1183,7 @@ footer {
   font-size: 14px;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  color: var(--clr-gray);
+  color: var(--clr-text);
 
   .container {
     display: flex;
@@ -1165,9 +1192,7 @@ footer {
     align-items: center;
     font-size: 14px;
     font-weight: 400;
-    
   }
-
 
   @media (min-width: 768px) {
     .container {
@@ -1177,8 +1202,6 @@ footer {
       align-items: center;
       gap: 5px;
     }
-
-
   }
 }
 
