--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
   --clr-icon: #33354d;
   --clr-icon-open: #ffffff;
   --clr-faq-bg: #ffffff;
+  --clr-border: #e2e3eb;
 
   --container-padding: 1rem;
   --transtion-time: all 0.2s;
@@ -679,6 +680,13 @@ header .container {
       p {
         line-height: var(--line-height-p);
       }
+
+      .receive-img {
+        background-color: var(--clr-icon-bg);
+        width: 2.5rem;
+        height: 2rem;
+        text-align: center;
+      }
     }
 
     .receive-info {
@@ -716,7 +724,7 @@ header .container {
     grid-template-rows: auto auto auto auto;
     background-color: var(--clr-brand-bg);
     margin-top: 2.5rem;
-    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 10px 0 var(--clr-border);
     padding: 1rem;
 
     .quote-img {
@@ -794,11 +802,11 @@ header .container {
   }
 
   .questions {
-    border: 0.5px solid var(--clr-border-gray);
+    border: 0.5px solid var(--clr-border);
     border-radius: 0.5rem;
 
     .faq {
-      border: 0.5px solid var(--clr-border-gray);
+      border: 0.5px solid var(--clr-border);
       padding: 1rem;
     }
 
